--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,15 +2,74 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:layout_width="match_parent"
+    android:layout_height="50dp"
+    android:orientation="horizontal"
+    android:descendantFocusability="blocksDescendants">
     <TextView
         android:id="@+id/text"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:text="testtesttesttesttesttest"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/beginner"/>
+    <TextView
+        android:id="@+id/beginner"
+        android:layout_width="@dimen/rank_width"
+        android:layout_height="0dp"
+        android:text="20"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:background="@color/beginner_blue"
+        app:layout_constraintRight_toLeftOf="@id/basic"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+    <TextView
+        android:id="@+id/basic"
+        android:layout_width="@dimen/rank_width"
+        android:layout_height="0dp"
+        android:text="20"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:background="@color/basic_yellow"
+        app:layout_constraintRight_toLeftOf="@id/difficult"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+    <TextView
+        android:id="@+id/difficult"
+        android:layout_width="@dimen/rank_width"
+        android:layout_height="0dp"
+        android:text="20"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:background="@color/difficult_red"
+        app:layout_constraintRight_toLeftOf="@id/expert"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+    <TextView
+        android:id="@+id/expert"
+        android:layout_width="@dimen/rank_width"
+        android:layout_height="0dp"
+        android:text="20"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:background="@color/expert_green"
+        app:layout_constraintRight_toLeftOf="@id/challenge"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+    <TextView
+        android:id="@+id/challenge"
+        android:layout_width="@dimen/rank_width"
+        android:layout_height="0dp"
+        android:text="20"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:background="@color/challenge_purple"
+        app:layout_constraintRight_toLeftOf="@id/button"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
     <ImageButton
         android:id="@+id/button"
         android:layout_width="wrap_content"
@@ -18,6 +77,7 @@
         android:background="@null"
         android:src="@android:drawable/star_big_on"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
