カラーパレット作成

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <!-- material designのカラーパレットを使う -->
+    <!-- https://material.io/resources/color/#!/?view.left=0&view.right=0&primary.color=263238 -->
+    <color name="colorPrimary">#263238</color>
+    <color name="colorPrimaryDark">#000a12</color>
+    <color name="colorPrimaryLight">#4f5b62</color>
+    <color name="textColor">#FFFFFF</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="black">#000000</color>
-    <color name="white">#FFFFFF</color>
-    <color name="gray">#777777</color>
     <color name="beginner_blue">#E1FFFF</color>
     <color name="basic_yellow">#FFFEE1</color>
     <color name="difficult_red">#FEE4E1</color>
