--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,6 @@
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:layout_constraintTop_toTopOf="parent"/>
-
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
@@ -26,5 +25,6 @@
         android:dividerHeight="1dp"
         app:layout_constraintTop_toBottomOf="@id/app_bar"
         app:layout_constraintBottom_toBottomOf="parent"/>
+    <include layout="@layout/drawer"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
