--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-	<item
-		android:id="@+id/favorite"
-		android:icon="@drawable/baseline_star_24"
-		android:title="@string/favorite" />
+	<group>
+		<item
+			android:id="@+id/musicList"
+			android:icon="@drawable/baseline_list_black_24"
+			android:title="@string/music_list" />
+		<item
+			android:id="@+id/favorite"
+			android:icon="@drawable/baseline_star_24"
+			android:title="@string/favorite" />
+	</group>
 </menu>
